fix: add z-index to .header__subtitle_place_header

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,7 @@
   position: absolute;
   bottom: 30px;
   left: 64px;
+  z-index: 1;
 }
 
 .header__link {
